--- a/index.html
+++ b/index.html
@@ -34,27 +34,24 @@
             margin-bottom: 10px;
         }
         .content{
-            width: 100%;
-            height: 60vh;
             background-color: rgb(102, 117, 117);
+            margin-bottom: 10px;
         }
         .name{
+            font-size: 48px;
             text-align: center;
         }
         .cardAll{
             width: 100%;
             height: 50%;
             display: flex;
-            /* justify-content: space-around; */
             flex-wrap: wrap;
-            /* background-color: rgb(150, 135, 138); */
         }
         .card{
-            width:500px;
-            height: 500px;
-            background-color: rgb(133, 182, 182);
+            width:300px;
+            height: 300px;
             border-radius: 20px;
-            border: 4px solid;
+            border: 3px solid rgb(85, 74, 74);
             margin: 5px;
             position: relative;
             display: flex;
@@ -63,13 +60,18 @@
             align-items: center;
         }
         .btn{
-            width: 100%;
-            height: 100%; 
+            width: 300px;
+            height: 100%;
+            color: #ffffff;
             font-size: 36px ;
             text-align: center;
             border-radius:10px;
             border: 3px solid white;
             background-color: rgb(167, 92, 104);
+        }
+        .btn:hover{
+            color: #1d1616;
+            background-color: rgb(159, 130, 135);
         }
 
     </style>
@@ -77,7 +79,7 @@
 <body>
     <div class="container">
         <div class="content">
-            <div class="name">Threejs and Blender</div>
+            <div class="name">Three.js and Blender</div>
             <div class="cardAll">
                 <div class="card">
                     <img src="./img/CYUT.png" alt="">
@@ -88,21 +90,81 @@
                 <div class="card">
                     <img src="./img/Room.png" alt="">
                     <a href="Three-Room.html">
-                        <li class="btn">中興大學</li>
+                        <li class="btn">房間</li>
                     </a>
                 </div>
                 <div class="card">
                     <img src="./img/Kinopio.png" alt="">
                     <a href="Three-Kinopio.html">
-                        <li class="btn">中興大學</li>
+                        <li class="btn">奇諾比奧</li>
+                    </a>
+                </div>
+                <div class="card">
+                    <img src="./img/Car.png" alt="">
+                    <a href="Three-Car.html">
+                        <li class="btn">車子</li>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="content">
+            <div class="name">JavaScript</div>
+            <div class="cardAll">
+                <div class="card">
+                    <img src="./img/colorgame.png" alt="">
+                    <a href="colorgame.html">
+                        <li class="btn">色弱遊戲</li>
+                    </a>
+                </div>
+                <div class="card">
+                    <img src="./img/weather.png" alt="">
+                    <a href="weather-bs-vue2.html">
+                        <li class="btn">天氣小卡</li>
+                    </a>
+                </div>
+                <div class="card">
+                    <img src="./img/BMI.png" alt="">
+                    <a href="BMI.html">
+                        <li class="btn">BMI</li>
+                    </a>
+                </div>
+                <div class="card">
+                    <img src="./img/peoplecard.png" alt="">
+                    <a href="peoplecard.html">
+                        <li class="btn">隨機卡</li>
+                    </a>
+                </div>
+                <div class="card">
+                    <img src="./img/todoVue.png" alt="">
+                    <a href="todoVue.html">
+                        <li class="btn">To-do-List</li>
+                    </a>
+                </div>
+            </div>     
+        </div>
+        <div class="content">
+            <div class="name">CSS/RWD</div>
+            <div class="cardAll">
+                <div class="card">
+                    <img src="./img/Pac-man.png" alt="">
+                    <a href="Pac-Man.html">
+                        <li class="btn">Pac-Man</li>
+                    </a>
+                </div>
+                <div class="card">
+                    <img src="./img/microsoft.png" alt="">
+                    <a href="./microsoft-scss/microsoft.html">
+                        <li class="btn">Microsoft仿切</li>
+                    </a>
+                </div>
+                <div class="card">
+                    <img src="./img/Loading.png" alt="">
+                    <a href="./loading-scss/loading.html">
+                        <li class="btn">Loading</li>
                     </a>
                 </div>
 
-            </div>
-        </div>
-        <div class="containerBottom">
-            <div class="containerL"></div>
-            <div class="containerR"></div>
+            </div>     
         </div>
     </div>
     
