--- a/All-page.html
+++ b/All-page.html
@@ -11,9 +11,6 @@
         }
         html,
         body{
-            /* display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap; */
             font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
         li {
@@ -31,7 +28,7 @@
             width: 80%;
             height: 80%;
             border-radius: 20px;
-            margin-bottom: 10px;
+            margin: 10px;
         }
         .content{
             background-color: rgb(133, 196, 196);
@@ -59,6 +56,18 @@
             justify-content: center;
             align-items: center;
         }
+        .card2{
+            width:500px;
+            height: 300px;
+            border-radius: 20px;
+            border: 3px solid rgb(77, 85, 74);
+            margin: 5px;
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
         .btn{
             width: 250px;
             height: 100%;
@@ -73,11 +82,60 @@
             color: #1d1616;
             background-color: rgb(159, 130, 135);
         }
+        .btn2{
+            width: 400px;
+            height: 100%;
+            color: #ffffff;
+            font-size: 36px ;
+            text-align: center;
+            border-radius:10px;
+            border: 3px solid white;
+            background-color: rgb(167, 92, 104);
+        }
+        .btn2:hover{
+            color: #1d1616;
+            background-color: rgb(159, 130, 135);
+        }
 
     </style>
 </head>
 <body>
     <div class="container">
+        <div class="content">
+            <div class="name">中興大學八樓導覽</div>
+            <div class="cardAll">
+                <div class="card2">
+                    <img src="./img/8thfloor1.png" alt="">
+                    <a href="Three-CYUT.html">
+                        <li class="btn2">中興大學八樓導覽</li>
+                    </a>
+                </div>
+                <div class="card2">
+                    <img src="./img/8thfloor2.png" alt="">
+                    <a href="Three-CYUT.html">
+                        <li class="btn2">中興大學八樓導覽</li>
+                    </a>
+                </div>
+                <div class="card2">
+                    <img src="./img/8thfloor3.png" alt="">
+                    <a href="Three-CYUT.html">
+                        <li class="btn2">中興大學八樓導覽</li>
+                    </a>
+                </div>
+                <div class="card2">
+                    <img src="./img/8thfloor4.png" alt="">
+                    <a href="Three-CYUT.html">
+                        <li class="btn2">中興大學八樓導覽</li>
+                    </a>
+                </div>
+                <div class="card2">
+                    <img src="./img/8thfloor5.png" alt="">
+                    <a href="Three-CYUT.html">
+                        <li class="btn2">中興大學八樓導覽</li>
+                    </a>
+                </div>
+            </div>
+        </div>
         <div class="content">
             <div class="name">Three.js and Blender</div>
             <div class="cardAll">
