--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three-cyut</title>
+    <title></title>
     <style>
     * {
         box-sizing: border-box;
@@ -96,7 +96,7 @@
             const floorDIV = document.createElement('a');
             floorDIV.href = 'https://112-07-nchu-blender3d.dev-hub.io/index.html';
             floorDIV.className = 'label';
-            floorDIV.textContent = '中興大學八樓導覽';
+            floorDIV.textContent = '中興大學綜合教學大樓八樓導覽';
             const floorLabel = new CSS2DObject(floorDIV);
             floorLabel.position.set(0, 1.5, 0);
             gltf.scene.children[3].add(floorLabel);
